[project]
name = "Ciel"
version = "0.1.0"
description = "Discord bot for scheduling D&D campaigns"
authors = [
    { name = "Devon Tingley", email = "dtingley@twilit.io" },
]
license = {text = "MIT"}

requires-python = ">=3.10"
dependencies = [
    "discord.py>=2.0.0",
]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
lint = "black ."
lint-check = "black --check ."

test = "pytest --cov"
post_test = "rm test.db"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "black>=22.6.0",
]

[tool.pyright]
venvPath = ".venv"
venv = "."

